<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/topTopBack"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/topbox1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/topBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/backspace"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"/>

    <ImageView
        android:id="@+id/topHome"
        app:layout_constraintStart_toEndOf="@+id/topBack"
        app:layout_constraintTop_toTopOf="@+id/topBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="18dp"
        android:src="@drawable/home"/>

    <TextView
        android:id="@+id/topNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topBack"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/idbox"
        android:paddingTop="5dp"
        android:text="201701742"
        android:textAlignment="center"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/topLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/topboxline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topTopBack"
        />

    <ImageView
        android:id="@+id/mainLogo"
        android:layout_width="136dp"
        android:layout_height="74dp"
        android:layout_marginTop="90dp"
        android:src="@drawable/logotype1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deskChoiceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/app_id_deskChangeFail_text"
        android:textColor="@color/black"
        android:textSize="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topTopBack" />

    <TextView
        android:id="@+id/deskChoiceSubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/app_id_deskSubFail_text"
        android:textColor="@color/black"
        android:textSize="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deskChoiceText" />

    <TextView
        android:id="@+id/deskChangeGoBtn"
        android:layout_width="166dp"
        android:layout_height="27dp"
        android:background="@drawable/no_idbutton"
        android:fontFamily="@font/roboto_medium"
        android:paddingTop="6dp"
        android:text="@string/app_id_deskChangeFaiLBtn_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deskChoiceText" />

</androidx.constraintlayout.widget.ConstraintLayout>